--- a/temperature_control/temperature_control.ioc
+++ b/temperature_control/temperature_control.ioc
@@ -11,24 +11,30 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM3
+Mcu.IP5=USART1
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32G031K(4-6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PB4
-Mcu.Pin11=PB5
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14-BOOT0
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM3_VS_ClockSourceITR
 Mcu.Pin2=PF2 - NRST
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
-Mcu.Pin7=PC6
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14-BOOT0
-Mcu.PinsNb=13
+Mcu.Pin7=PA9
+Mcu.Pin8=PC6
+Mcu.Pin9=PA10
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G031K8Tx
@@ -40,12 +46,16 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA1.GPIOParameters=GPIO_Speed,PinState
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA1.Locked=true
 PA1.Mode=Full_Duplex_Master
 PA1.PinState=GPIO_PIN_RESET
 PA1.Signal=SPI1_SCK
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_JTMS
 PA13.Locked=true
@@ -72,6 +82,8 @@ PA4.GPIOParameters=PinState
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB4.Locked=true
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
@@ -125,7 +137,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
@@ -167,11 +179,21 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=304
+TIM3.Prescaler=16-1
+USART1.IPParameters=VirtualMode-Asynchronous,MSBFirstParam
+USART1.MSBFirstParam=ADVFEATURE_MSBFIRST_DISABLE
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_7B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR2
+VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
 board=NUCLEO-G031K8
 boardIOC=true
 isbadioc=false
