--- a/temperature_control/temperature_control.ioc
+++ b/temperature_control/temperature_control.ioc
@@ -2,16 +2,21 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE
+FREERTOS.Tasks01=Modbus_task,32,128,Modbus_task_handle,Default,NULL,Dynamic,NULL,NULL;Temperature_tas,8,128,Temperature_task_handle,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMINIMAL_STACK_SIZE=64
+FREERTOS.configTOTAL_HEAP_SIZE=2048
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32G031K8T6
 Mcu.Family=STM32G0
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=TIM3
+Mcu.IP0=FREERTOS
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
 Mcu.IP5=USART1
 Mcu.IP6=USART2
 Mcu.IPNb=7
@@ -23,9 +28,8 @@ Mcu.Pin10=PA13
 Mcu.Pin11=PA14-BOOT0
 Mcu.Pin12=PB4
 Mcu.Pin13=PB5
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin15=VP_SYS_VS_tim3
 Mcu.Pin2=PF2 - NRST
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -34,20 +38,25 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA9
 Mcu.Pin8=PC6
 Mcu.Pin9=PA10
-Mcu.PinsNb=17
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G031K8Tx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:false\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM3_IRQn=true\:3\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM3_IRQn
+NVIC.TimeBaseIP=TIM3
+NVIC.USART1_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true\:true
 PA1.GPIOParameters=GPIO_Speed,PinState
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA1.Locked=true
@@ -137,35 +146,36 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
-RCC.ADCFreq_Value=16000000
-RCC.AHBFreq_Value=16000000
-RCC.APBFreq_Value=16000000
-RCC.APBTimFreq_Value=16000000
-RCC.CortexFreq_Value=16000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+RCC.ADCFreq_Value=64000000
+RCC.AHBFreq_Value=64000000
+RCC.APBFreq_Value=64000000
+RCC.APBTimFreq_Value=64000000
+RCC.CortexFreq_Value=64000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=16000000
+RCC.FCLKCortexFreq_Value=64000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
+RCC.HCLKFreq_Value=64000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=16000000
-RCC.I2S1Freq_Value=16000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,TIM15Freq_Value,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=16000000
-RCC.LPTIM2Freq_Value=16000000
-RCC.LPUART1Freq_Value=16000000
+RCC.I2C1Freq_Value=64000000
+RCC.I2S1Freq_Value=64000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=64000000
+RCC.LPTIM2Freq_Value=64000000
+RCC.LPUART1Freq_Value=64000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=16000000
+RCC.MCO1PinFreq_Value=64000000
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
-RCC.PWRFreq_Value=16000000
-RCC.SYSCLKFreq_VALUE=16000000
+RCC.PWRFreq_Value=64000000
+RCC.SYSCLKFreq_VALUE=64000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=16000000
-RCC.TIM1Freq_Value=16000000
-RCC.USART1Freq_Value=16000000
+RCC.TIM1Freq_Value=64000000
+RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=16000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
@@ -174,26 +184,22 @@ SH.GPXTI2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=1000.0 KBits/s
+SPI1.CalculateBaudRate=4.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM3.IPParameters=Prescaler,Period
-TIM3.Period=304
-TIM3.Prescaler=16-1
 USART1.IPParameters=VirtualMode-Asynchronous,MSBFirstParam
 USART1.MSBFirstParam=ADVFEATURE_MSBFIRST_DISABLE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_7B
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR2
-VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_SYS_VS_tim3.Mode=TIM3
+VP_SYS_VS_tim3.Signal=SYS_VS_tim3
 board=NUCLEO-G031K8
 boardIOC=true
+rtos.0.ip=FREERTOS
 isbadioc=false
