--- a/temperature_control/temperature_control.ioc
+++ b/temperature_control/temperature_control.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=Modbus_task,32,128,Modbus_task_handle,Default,NULL,Dynamic,NULL,NULL;Temperature_tas,8,128,Temperature_task_handle,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Modbus_task,40,128,Modbus_task_handle,Default,NULL,Dynamic,NULL,NULL;Temperatur_task,8,128,Temperature_task_handle,Default,NULL,Dynamic,NULL,NULL;Control_task,16,64,Regulation_task_handle,Default,NULL,Dynamic,NULL,NULL;UI_Task,8,64,UI_Task_Handle,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=64
 FREERTOS.configTOTAL_HEAP_SIZE=2048
 File.Version=6
